fix(TileMap): Implement the LevelScene.
- Create the LevelScene,
- Update the AbstractScene to support more features,
- Implement the TileMapRenderPlugin,
- fix issue on the TileMapLoader on some Entity Attributes and add Behavior instantiation,
- Add full Javadoc on TileMapLoader.

fix #12